atrasos implementados corretamente a partir de lambda, p e E[X] lidos do arquivo de configuração